fixed coordinates issues, optimization works, added tensorboard logging

--- a/notebooks/kgeo_raytracing.ipynb
+++ b/notebooks/kgeo_raytracing.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-tf7hmuvx because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-rf05519c because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
     "from matplotlib import rc\n",
     "rc('animation', html='jshtml')\n",
     "\n",
-    "import utils, emission, visualization, network\n",
+    "import utils, emission_utils, visualization, network_utils\n",
     "from kerr_raytracing_ana import raytrace_ana"
    ]
   },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e708b0eb-e6ec-4934-b232-509934404ebf",
    "metadata": {},
    "outputs": [
@@ -50,15 +50,15 @@
      "output_type": "stream",
      "text": [
       "calculating preliminaries...\n",
-      "integrating in theta...1.99 s\n",
-      "integrating in r...3.48 s\n",
+      "integrating in theta...2.04 s\n",
+      "integrating in r...3.54 s\n",
       "plotting data...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "873f9abd5bc4462a88e03ec04c590ea8",
+       "model_id": "c36ca88068bd4e409ac873cb6260e18f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "%matplotlib widget\n",
+    "# %matplotlib widget\n",
     "sensor_1d = raytrace_ana(a=0.0, th_o=np.pi/2, plotdata=True)"
    ]
   },
