--- a/notebooks/kgeo_raytracing.ipynb
+++ b/notebooks/kgeo_raytracing.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-rf05519c because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-n67atazf because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -21,9 +21,6 @@
     "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "\n",
-    "from matplotlib import rc\n",
-    "rc('animation', html='jshtml')\n",
     "\n",
     "import utils, emission_utils, visualization, network_utils\n",
     "from kerr_raytracing_ana import raytrace_ana"
@@ -78,7 +75,7 @@
     }
    ],
    "source": [
-    "# %matplotlib widget\n",
+    "%matplotlib widget\n",
     "sensor_1d = raytrace_ana(a=0.0, th_o=np.pi/2, plotdata=True)"
    ]
   },
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "649126e7-980f-4852-a9b5-d545dda66c75",
    "metadata": {},
    "outputs": [
@@ -115,15 +112,15 @@
      "output_type": "stream",
      "text": [
       "calculating preliminaries...\n",
-      "integrating in theta...72.69 s\n",
-      "integrating in r...154.02 s\n",
+      "integrating in theta...49.77 s\n",
+      "integrating in r...100.74 s\n",
       "plotting data...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aab0e5d7299c40bb9484eaaa1244b066",
+       "model_id": "e05ce01d3c834ef6a5c85537cc0b8856",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,8 +140,8 @@
     }
    ],
    "source": [
-    "npix = 100\n",
-    "alpha, beta = np.meshgrid(np.linspace(-8., 8., npix), np.linspace(-8., 8., npix))\n",
+    "num_alpha, num_beta = 100, 100\n",
+    "alpha, beta = np.meshgrid(np.linspace(-8., 8., num_alpha), np.linspace(-8., 8., num_beta))\n",
     "\n",
     "%matplotlib widget\n",
     "sensor_2d = raytrace_ana(a=0.0, beta=beta.ravel(), alpha=alpha.ravel(), th_o=np.pi/2, plotdata=True)"
@@ -152,12 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "ef168b78-36dd-4851-b30b-889163666aeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the sensor to netcdf \n",
+    "sensor_2d.attrs.update(num_alpha=num_alpha, num_beta=num_beta)\n",
     "output_path = '../sensors/a{:0.2f}_th{:0.2f}_ngeo{}_npix{}.nc'.format(\n",
     "    sensor_2d.spin.data, sensor_2d.inc.data, sensor_2d.geo.size, sensor_2d.pix.size\n",
     ")\n",
@@ -167,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bhnerf",
+   "display_name": "jax",
    "language": "python",
-   "name": "bhnerf"
+   "name": "jax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -181,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
