--- a/notebooks/orbiting_hotspots_3D.ipynb
+++ b/notebooks/orbiting_hotspots_3D.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-u4pa9xaw because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-444xloxi because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -35,17 +35,17 @@
     "sys.path.append('../bhnerf')\n",
     "\n",
     "import os\n",
+    "\n",
+    "import jax\n",
+    "from jax import random\n",
+    "from jax import numpy as jnp\n",
+    "\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
     "\n",
     "import xarray as xr\n",
     "import flax\n",
     "from flax.training import train_state\n",
     "import optax\n",
-    "\n",
-    "import jax\n",
-    "from jax import random\n",
-    "from jax import numpy as jnp\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "id": "57484603-5b5e-4291-b4d1-8e0ea53000f8",
    "metadata": {},
    "outputs": [],
@@ -145,8 +145,13 @@
     "                )\n",
     "                emission_vis = np.reshape(emission_vis, [t_res_vis, x_res_vis, y_res_vis, z_res_vis])\n",
     "                emission_vis = jnp.where(x_vis**2 + y_vis**2 + z_vis**2 >= r_min**2, emission_vis, jnp.zeros_like(emission_vis))\n",
+    "                \n",
+    "                # Log initialization seperately \n",
     "                images = intensity_to_nchw(emission_vis[0])\n",
-    "                writer.add_images('emission/esimate', images, global_step=i)\n",
+    "                if (i == 1): \n",
+    "                    writer.add_images('emission/initial', images, global_step=i)\n",
+    "                else:\n",
+    "                    writer.add_images('emission/esimate', images, global_step=i)\n",
     "\n",
     "            # Training\n",
     "            batch_inds = np.random.randint(0, x.shape[0], hparams['batchsize'])\n",
@@ -172,8 +177,284 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60c82bc0-2d1e-427e-a4b1-d0b7b5c9c9b3",
+   "metadata": {},
+   "source": [
+    "# Multiple Hotspots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "id": "7df19c69-67e2-4dfb-acc9-64eae373d64e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate hotspot emission\n",
+    "nt, nx, ny, nz = 64, 64, 64, 64\n",
+    "nt_test = 64\n",
+    "nspots = 1\n",
+    "r_isco = 3.0 \n",
+    "\n",
+    "phi = np.pi            # azimuth angle (ccw from x-axis)\n",
+    "theta = np.pi / 3.0    # zenith angle (pi/2 = equatorial plane)\n",
+    "orbit_radius = 3.5 \n",
+    "std = .4 * np.ones_like(orbit_radius)\n",
+    "initial_frame = emission_utils.generate_hotspots_3d(nx, ny, nz, theta, phi, orbit_radius, std, r_isco)\n",
+    "\n",
+    "nspots = 8\n",
+    "rot_axis = np.array([np.cos(theta)*np.cos(phi), np.cos(theta)*np.sin(phi), -np.sin(theta)])\n",
+    "initial_frame = emission_utils.generate_orbit_3d(initial_frame, nt, 1, rot_axis).isel(\n",
+    "    t=np.random.choice(range(0, nt, 5), size=nspots)).sum('t')\n",
+    "\n",
+    "orbit_period = 3.5**(-3./2.) \n",
+    "velocity_field = lambda r: (1.0 / orbit_period) * r**(-3/2)\n",
+    "emission = emission_utils.generate_orbit_3d(initial_frame, nt, velocity_field, rot_axis)\n",
+    "emission_test = emission_utils.generate_orbit_3d(initial_frame, nt_test, velocity_field, rot_axis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "267a10d7-b331-4b39-a843-ed97dc14c38f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa16c41ab2fb416988c919ad2fcfe142",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='t', max=63), Output()), _dom_classes=('widget-interact',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "extent = [(float(initial_frame[dim].min()), float(initial_frame[dim].max())) for dim in initial_frame.dims]\n",
+    "@interact(t=widgets.IntSlider(min=0, max=emission.t.size-1, step=1, value=0))\n",
+    "def plot_vol(t):\n",
+    "    ipv.figure()\n",
+    "    ipv.view(0, -60, distance=2.5)\n",
+    "    ipv.volshow(emission.isel(t=t), extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "    ipv.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1adc2562-64ca-4f54-afb8-b123adf5082f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55794be77fe04a6cb6f0cac62c170e6d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "MovieWriter imagemagick unavailable; using Pillow instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.animation.FuncAnimation at 0x7f4f255fbbb0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualize radiance measurements \n",
+    "measurements_2d = emission_utils.integrate_rays(emission, sensor.where(sensor.r < 5))\n",
+    "measurements_2d = xr.DataArray(measurements_2d.data.reshape(nt, sensor.num_alpha, sensor.num_beta), dims=['t', 'alpha', 'beta'])\n",
+    "\n",
+    "%matplotlib widget\n",
+    "out_path = 'gifs/multiple_hs.measurements.theta_{:2.0f}.phi_{:2.0f}.nspots{:d}.gif'.format(np.rad2deg(theta), np.rad2deg(phi), nspots)\n",
+    "measurements_2d.utils_visualization.animate(output=out_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "58c9aed0-0455-474b-9603-a5cd1cb22bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rays which do not cross the domain (this gives measurements that cannot be reshaped into an image)\n",
+    "sensor = sensor.where(sensor.r < 5, drop=True)\n",
+    "measurements = emission_utils.integrate_rays(emission, sensor)\n",
+    "measurements_test = emission_utils.integrate_rays(emission_test, sensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "663f22e6-19d7-43f2-b25d-92505df37558",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:390: UserWarning: jax.host_count has been renamed to jax.process_count. This alias will eventually be removed; please update your code.\n",
+      "  warnings.warn(\n",
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:377: UserWarning: jax.host_id has been renamed to jax.process_index. This alias will eventually be removed; please update your code.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d64f2e5b426480a9f3a64807af4eb60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "iteration:   0%|          | 0/50000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Training parameters\n",
+    "hparams = {\n",
+    "    'num_iters': 50000,\n",
+    "    'lr_init': 1e-4,\n",
+    "    'lr_final': 1e-6,\n",
+    "    'posenc_deg': 3,\n",
+    "    'batchsize': 1024,\n",
+    "}\n",
+    "state, emission_vis = train_network(\n",
+    "    sensor, emission, emission_test, velocity_field, hparams, \n",
+    "    runname='multiple_shearing_hs_3D', log_period=100, x_res_vis=64, y_res_vis=64, z_res_vis=64\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "37d3af11-aac3-4b5f-9ed9-c35adc330cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_estimate = emission_utils.generate_orbit_3d(xr.DataArray(emission_vis[0], coords=initial_frame.coords), nt, velocity_field, rot_axis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "01539fe4-b300-40e7-85e8-7c26f387861c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62d50bb6b06d432c986c038841637ad3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='t', max=63), Output()), _dom_classes=('widget-interact',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "extent = [(float(initial_frame[dim].min()), float(initial_frame[dim].max())) for dim in initial_frame.dims]\n",
+    "@interact(t=widgets.IntSlider(min=0, max=emission.t.size-1, step=1, value=0))\n",
+    "def plot_vol(t):\n",
+    "    ipv.figure()\n",
+    "    ipv.view(0, -60, distance=2.5)\n",
+    "    ipv.volshow(emission_estimate.isel(t=t), extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "    ipv.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "dd523272-b020-4759-ada2-d05f34d5c8c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "721e4fd135d14b2eb8ec368b8f5fde12",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:matplotlib.animation:MovieWriter imagemagick unavailable; using Pillow instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.animation.FuncAnimation at 0x7f4f1f6063a0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save measurement prediction\n",
+    "sensor = xr.load_dataset('../sensors/a0.00_th1.57_ngeo200_npix10000.nc')\n",
+    "measurements_2d = emission_utils.integrate_rays(emission_estimate, sensor.where(sensor.r < 5))\n",
+    "measurements_2d = xr.DataArray(measurements_2d.data.reshape(nt, sensor.num_alpha, sensor.num_beta), dims=['t', 'alpha', 'beta'])\n",
+    "\n",
+    "%matplotlib widget\n",
+    "out_path = 'gifs/multiple_hs.prediction.theta_{:2.0f}.phi_{:2.0f}.nspots{:d}.gif'.format(np.rad2deg(theta), np.rad2deg(phi), nspots)\n",
+    "measurements_2d.utils_visualization.animate(output=out_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31e16fe1-9ae3-4cc6-b7e8-3e8f9197ec2b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Single Hotspot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "3b5b535e-306b-42d3-a610-4fc0d540c2d9",
    "metadata": {},
    "outputs": [],
@@ -184,8 +465,8 @@
     "nspots = 1\n",
     "r_isco = 3.0 \n",
     "\n",
-    "phi = np.deg2rad(0)      # azimuth angle (ccw from x-axis)\n",
-    "theta = np.pi / 4.       # zenith angle (pi/2 = equatorial plane)\n",
+    "phi = np.pi            # azimuth angle (ccw from x-axis)\n",
+    "theta = np.pi / 3.0    # zenith angle (pi/2 = equatorial plane)\n",
     "\n",
     "orbit_radius = 3.5 \n",
     "std = .4 * np.ones_like(orbit_radius)\n",
@@ -201,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1f614de3-37dc-4f8b-b7c4-aacda3e25336",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "164488169bf24e3cbebaf1a1b12f9c90",
+       "model_id": "bc45d52509d348beb3184a6311040235",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +548,8 @@
     "measurements_2d = xr.DataArray(measurements_2d.data.reshape(nt, sensor.num_alpha, sensor.num_beta), dims=['t', 'alpha', 'beta'])\n",
     "\n",
     "%matplotlib widget\n",
-    "measurements_2d.utils_visualization.animate()"
+    "out_path = 'gifs/orbiting_hs.theta_{:2.0f}.phi_{:2.0f}.gif'.format(np.rad2deg(theta), np.rad2deg(phi))\n",
+    "measurements_2d.utils_visualization.animate(output=out_path)"
    ]
   },
   {
@@ -331,25 +613,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "015c91b8-91cf-4c48-bc6f-dfc7c7334eb9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c876ac9ae54d0cb809924ec18028dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ipv.figure()\n",
     "ipv.view(0, -60, distance=2.5)\n",
