--- a/notebooks/kgeo_raytracing.ipynb
+++ b/notebooks/kgeo_raytracing.ipynb
@@ -10,7 +10,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-n67atazf because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-gg2bvvex because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to eht-imaging! v 1.2.2 \n",
+      "\n"
      ]
     }
    ],
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e708b0eb-e6ec-4934-b232-509934404ebf",
    "metadata": {},
    "outputs": [
@@ -47,15 +55,15 @@
      "output_type": "stream",
      "text": [
       "calculating preliminaries...\n",
-      "integrating in theta...2.04 s\n",
-      "integrating in r...3.54 s\n",
+      "integrating in theta...1.55 s\n",
+      "integrating in r...2.52 s\n",
       "plotting data...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c36ca88068bd4e409ac873cb6260e18f",
+       "model_id": "da0d4e4f31eb430587586ff353122faf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "649126e7-980f-4852-a9b5-d545dda66c75",
    "metadata": {},
    "outputs": [
@@ -112,15 +120,15 @@
      "output_type": "stream",
      "text": [
       "calculating preliminaries...\n",
-      "integrating in theta...49.77 s\n",
-      "integrating in r...100.74 s\n",
+      "integrating in theta...13.74 s\n",
+      "integrating in r...27.25 s\n",
       "plotting data...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e05ce01d3c834ef6a5c85537cc0b8856",
+       "model_id": "9a7e28533b9345468c25701750e51af9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,16 +148,16 @@
     }
    ],
    "source": [
-    "num_alpha, num_beta = 100, 100\n",
+    "num_alpha, num_beta, ngeo = 64, 64, 100\n",
     "alpha, beta = np.meshgrid(np.linspace(-8., 8., num_alpha), np.linspace(-8., 8., num_beta))\n",
     "\n",
     "%matplotlib widget\n",
-    "sensor_2d = raytrace_ana(a=0.0, beta=beta.ravel(), alpha=alpha.ravel(), th_o=np.pi/2, plotdata=True)"
+    "sensor_2d = raytrace_ana(a=0.0, beta=beta.ravel(), alpha=alpha.ravel(), th_o=np.pi/2, plotdata=True, ngeo=ngeo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ef168b78-36dd-4851-b30b-889163666aeb",
    "metadata": {},
    "outputs": [],
