ngeht w/ riaf bg works with measurement noise

--- a/notebooks/orbiting_hotspots_3D.ipynb
+++ b/notebooks/orbiting_hotspots_3D.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-444xloxi because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-bzoguceq because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
     "from jax import random\n",
     "from jax import numpy as jnp\n",
     "\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '2'\n",
     "\n",
     "import xarray as xr\n",
     "import flax\n",
@@ -81,11 +81,11 @@
     "                  log_period=100, x_res_vis=64, y_res_vis=64, z_res_vis=64):\n",
     "    \n",
     "    # Training / testing coordinates\n",
-    "    train_coords = network_utils.get_input_coords(sensor, nt=emission.t.size)\n",
+    "    train_coords = network_utils.get_input_coords(sensor, t_array=np.linspace(0., 1., emission.t.size))\n",
     "    t, x, y, z, d = train_coords.values()\n",
     "    train_radiance = measurements.data.ravel() \n",
     "\n",
-    "    test_coords = network_utils.get_input_coords(sensor, nt=emission_test.t.size)\n",
+    "    test_coords = network_utils.get_input_coords(sensor, t_array=np.linspace(0., 1., emission.t.size))\n",
     "    test_radiance = measurements_test.data.ravel() \n",
     "    t_test, x_test, y_test, z_test, d_test = test_coords.values()\n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "7df19c69-67e2-4dfb-acc9-64eae373d64e",
    "metadata": {},
    "outputs": [],
@@ -216,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "267a10d7-b331-4b39-a843-ed97dc14c38f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa16c41ab2fb416988c919ad2fcfe142",
+       "model_id": "9a7e16ec5e074afca15f295dad3f927b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "1adc2562-64ca-4f54-afb8-b123adf5082f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55794be77fe04a6cb6f0cac62c170e6d",
+       "model_id": "dbd6a422eed1402098c0a97a8a7c2701",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,23 +264,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "MovieWriter imagemagick unavailable; using Pillow instead.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f4f255fbbb0>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -289,13 +272,14 @@
     "measurements_2d = xr.DataArray(measurements_2d.data.reshape(nt, sensor.num_alpha, sensor.num_beta), dims=['t', 'alpha', 'beta'])\n",
     "\n",
     "%matplotlib widget\n",
-    "out_path = 'gifs/multiple_hs.measurements.theta_{:2.0f}.phi_{:2.0f}.nspots{:d}.gif'.format(np.rad2deg(theta), np.rad2deg(phi), nspots)\n",
-    "measurements_2d.utils_visualization.animate(output=out_path)"
+    "anim = measurements_2d.utils_visualization.animate()\n",
+    "outpath = 'gifs/orbiting_hs.theta_{:2.0f}.phi_{:2.0f}.gif'.format(np.rad2deg(theta), np.rad2deg(phi))\n",
+    "# anim.save(outpath, writer='imagemagick', fps=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "58c9aed0-0455-474b-9603-a5cd1cb22bbb",
    "metadata": {},
    "outputs": [],
@@ -308,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "663f22e6-19d7-43f2-b25d-92505df37558",
    "metadata": {},
    "outputs": [
@@ -325,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d64f2e5b426480a9f3a64807af4eb60",
+       "model_id": "2af7ea21804b4f57b7674179d59a15ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,7 +329,7 @@
     "    'lr_final': 1e-6,\n",
     "    'posenc_deg': 3,\n",
     "    'batchsize': 1024,\n",
-    "}\n",
+    "} # for network\n",
     "state, emission_vis = train_network(\n",
     "    sensor, emission, emission_test, velocity_field, hparams, \n",
     "    runname='multiple_shearing_hs_3D', log_period=100, x_res_vis=64, y_res_vis=64, z_res_vis=64\n",
@@ -354,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "37d3af11-aac3-4b5f-9ed9-c35adc330cfc",
    "metadata": {},
    "outputs": [],
@@ -364,14 +348,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "01539fe4-b300-40e7-85e8-7c26f387861c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62d50bb6b06d432c986c038841637ad3",
+       "model_id": "66c56ebf0d85443aa76c40b893cb570b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,14 +379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "dd523272-b020-4759-ada2-d05f34d5c8c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "721e4fd135d14b2eb8ec368b8f5fde12",
+       "model_id": "2a86fb29dc174e20a353631ff9a533ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,10 +407,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f4f1f6063a0>"
+       "<matplotlib.animation.FuncAnimation at 0x7f937c59f4f0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3b5b535e-306b-42d3-a610-4fc0d540c2d9",
    "metadata": {},
    "outputs": [],
@@ -482,25 +466,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1f614de3-37dc-4f8b-b7c4-aacda3e25336",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc45d52509d348beb3184a6311040235",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='t', max=63), Output()), _dom_classes=('widget-interact',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extent = [(float(initial_frame[dim].min()), float(initial_frame[dim].max())) for dim in initial_frame.dims]\n",
     "@interact(t=widgets.IntSlider(min=0, max=emission.t.size-1, step=1, value=0))\n",
