--- a/notebooks/mem_regularization.ipynb
+++ b/notebooks/mem_regularization.ipynb
@@ -1,40 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "14a3ac3c-0d93-491f-aa27-3a6388484dc3",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Estimating hotspot(s) emission and rotational axis using NeRF. \n",
-    "\n",
-    "Notes:\n",
-    "Inner most stable circular orbit (ISCO), for spin=0 with r_g=2 this is at 3M \\\n",
-    "Overleaf notes: https://www.overleaf.com/project/60ff0ece5aa4f90d07f2a417"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "d450b1d8-b7b0-4731-a8f2-1a9772547f3a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-c_osw682 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to eht-imaging! v 1.2.2 \n",
-      "\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -77,32 +56,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "57484603-5b5e-4291-b4d1-8e0ea53000f8",
+   "execution_count": 21,
+   "id": "98872744-0f5a-4906-8403-6bcc77b2e074",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of network_utils failed: Traceback (most recent call last):\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 410, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 347, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 317, in update_class\n",
-      "    update_instances(old, new)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 280, in update_instances\n",
-      "    ref.__class__ = new\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/flax/linen/module.py\", line 528, in __setattr__\n",
-      "    raise errors.SetAttributeFrozenModuleError(self.__class__.__name__, name,\n",
-      "flax.errors.SetAttributeFrozenModuleError: Can't set __class__=<class 'network_utils.MLP'> for Module of type MLP: Module instance is frozen outside of setup method. (https://flax.readthedocs.io/en/latest/flax.errors.html#flax.errors.SetAttributeFrozenModuleError)\n",
-      "]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0., 1.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "nt, nx, ny, nz = 64, 64, 64, 64\n",
+    "fov = (10.0, 'GM/c^2')\n",
+    "std = (10.0, 10.0, 1.0)\n",
+    "gaussian = emission_utils.gaussian_3d(nx, ny, nz, std, fov)\n",
+    "gaussian = emission_utils.rotate_3d(gaussian, axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57484603-5b5e-4291-b4d1-8e0ea53000f8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def intensity_to_nchw(intensity, cmap='viridis', gamma=0.5):\n",
     "    cm = plt.get_cmap(cmap)\n",
@@ -114,11 +96,11 @@
     "                  log_period=100, x_res_vis=64, y_res_vis=64, z_res_vis=64):\n",
     "    \n",
     "    # Training / testing coordinates\n",
-    "    train_coords = network_utils.get_input_coords(sensor, t_array=emission.t.data)\n",
+    "    train_coords = network_utils.get_input_coords(sensor, nt=emission.t.size)\n",
     "    t, x, y, z, d = train_coords.values()\n",
     "    train_radiance = measurements.data.ravel() \n",
     "\n",
-    "    test_coords = network_utils.get_input_coords(sensor, t_array=emission_test.t.data)\n",
+    "    test_coords = network_utils.get_input_coords(sensor, nt=emission_test.t.size)\n",
     "    test_radiance = measurements_test.data.ravel() \n",
     "    t_test, x_test, y_test, z_test, d_test = test_coords.values()\n",
     "\n",
@@ -132,7 +114,8 @@
     "\n",
     "    d_vis = np.ones_like(y_vis)                  # meaningless placeholder for emission visualization\n",
     "    target_vis = np.ones([y_res_vis, x_res_vis]) # meaningless placeholder for emission visualization\n",
-    "    \n",
+    "    r_min = sensor.r.min().data                  # Zero network output where there is no supervision (within black-hole radius)  \n",
+    "\n",
     "    # Model setup and initialization\n",
     "    rng = jax.random.PRNGKey(1)\n",
     "    predictor = network_utils.PREDICT_EMISSION_AND_ROTAXIS_3D(posenc_deg=hparams['posenc_deg'])\n",
@@ -188,7 +171,7 @@
     "                )\n",
     "                axis_estimation = axis_estimation[0] / np.sqrt(np.dot(axis_estimation[0], axis_estimation[0]))\n",
     "                emission_vis = np.reshape(emission_vis, [t_res_vis, x_res_vis, y_res_vis, z_res_vis])\n",
-    "                emission_vis = jnp.where(x_vis**2 + y_vis**2 + z_vis**2 >= hparams['r_min']**2, emission_vis, jnp.zeros_like(emission_vis))\n",
+    "                emission_vis = jnp.where(x_vis**2 + y_vis**2 + z_vis**2 >= r_min**2, emission_vis, jnp.zeros_like(emission_vis))\n",
     "                \n",
     "                # Log emission and rotation axis\n",
     "                images = intensity_to_nchw(emission_vis[0])\n",
@@ -222,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 213,
    "id": "3b5b535e-306b-42d3-a610-4fc0d540c2d9",
    "metadata": {},
    "outputs": [],
@@ -231,10 +214,10 @@
     "nt, nx, ny, nz = 64, 64, 64, 64\n",
     "nt_test = 64\n",
     "nspots = 1\n",
-    "r_isco = 3.0\n",
+    "r_isco = 3.0 \n",
     "\n",
-    "phi = 0        # azimuth angle (ccw from x-axis)\n",
-    "theta = np.pi / 3.0    # zenith angle (pi/2 = equatorial plane)\n",
+    "phi = np.random.rand()*2*np.pi             # azimuth angle (ccw from x-axis)\n",
+    "theta = np.random.rand()*np.pi    # zenith angle (pi/2 = equatorial plane)\n",
     "\n",
     "orbit_radius = 3.5 \n",
     "std = .4 * np.ones_like(orbit_radius)\n",
@@ -245,40 +228,129 @@
     "\n",
     "rot_axis =  np.array([np.cos(theta)*np.cos(phi), np.cos(theta)*np.sin(phi), -np.sin(theta)])\n",
     "emission = emission_utils.generate_orbit_3d(initial_frame, nt, velocity_field, rot_axis)\n",
-    "emission_test = emission_utils.generate_orbit_3d(initial_frame, nt_test, velocity_field, rot_axis)"
+    "# emission_test = emission_utils.generate_orbit_3d(initial_frame, nt_test, velocity_field, rot_axis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "1f614de3-37dc-4f8b-b7c4-aacda3e25336",
+   "execution_count": 183,
+   "id": "a78bd89d-9c93-4d6f-b216-d4dcfe615f7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.623960004418948, 2.3204244726992567)"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi, theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "108e82db-6590-41a3-904f-73237c8020b6",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[autoreload of network_utils failed: Traceback (most recent call last):\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 410, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 347, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 317, in update_class\n",
-      "    update_instances(old, new)\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 280, in update_instances\n",
-      "    ref.__class__ = new\n",
-      "  File \"/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/flax/linen/module.py\", line 528, in __setattr__\n",
-      "    raise errors.SetAttributeFrozenModuleError(self.__class__.__name__, name,\n",
-      "flax.errors.SetAttributeFrozenModuleError: Can't set __class__=<class 'network_utils.MLP'> for Module of type MLP: Module instance is frozen outside of setup method. (https://flax.readthedocs.io/en/latest/flax.errors.html#flax.errors.SetAttributeFrozenModuleError)\n",
-      "]\n"
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/ipyvolume/serialize.py:92: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  gradient = gradient / np.sqrt(gradient[0] ** 2 + gradient[1] ** 2 + gradient[2] ** 2)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38f1b94ef9c040bf872162111c3781b8",
+       "model_id": "553210955ee64bf586d2a0e3ab3828b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HBox(children=(Label(value='levels:'), FloatSlider(value=0.0, max=1.0, step=0.00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nt, nx, ny, nz = 64, 64, 64, 64\n",
+    "rho = np.sqrt(rot_axis[0]**2 + rot_axis[1]**2)\n",
+    "\n",
+    "fov = (10.0, 'GM/c^2')\n",
+    "std = (0.5, 10.0, 10.0)\n",
+    "\n",
+    "phi_ = -np.arctan2(rho, rot_axis[2])\n",
+    "theta_ = np.arctan2(rot_axis[1], rot_axis[0])\n",
+    "axis = [-np.cos(theta_), np.sin(theta_), 0]\n",
+    "gaussian = emission_utils.gaussian_3d(nx, ny, nz, std, fov)\n",
+    "gaussian = emission_utils.rotate_3d(gaussian, axis=[0, 0, 1], angle=phi_)\n",
+    "gaussian = emission_utils.rotate_3d(gaussian, axis=axis, angle=-theta_)\n",
+    "\n",
+    "ipv.figure()\n",
+    "ipv.view(0, -60, distance=2.5)\n",
+    "a = emission.sum('t')\n",
+    "# a = emission.sel(t=0)\n",
+    "ipv.volshow(gaussian + a, \n",
+    "            memorder='F', extent=extent, level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3])\n",
+    "ipv.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a9e7f807-eaf8-4f16-a6d5-553285bc719a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d1681b250e54d709bd1a1c56db522c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HBox(children=(Label(value='levels:'), FloatSlider(value=0.0, max=1.0, step=0.00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nt, nx, ny, nz = 64, 64, 64, 64\n",
+    "rho = np.sqrt(rot_axis[0]**2 + rot_axis[1]**2)\n",
+    "axis =  np.array([-rot_axis[1]/rho, rot_axis[0]/rho, 0])\n",
+    "\n",
+    "fov = (10.0, 'GM/c^2')\n",
+    "std = (10.0, 10.0, 1.0)\n",
+    "gaussian = emission_utils.gaussian_3d(nx, ny, nz, std, fov)\n",
+    "gaussian = emission_utils.rotate_3d(gaussian, axis, theta)\n",
+    "\n",
+    "ipv.figure()\n",
+    "ipv.view(0, -60, distance=2.5)\n",
+    "ipv.volshow(gaussian + emission.sum('t'), memorder='F', extent=extent, level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3])\n",
+    "ipv.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "1f614de3-37dc-4f8b-b7c4-aacda3e25336",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "483a89a24d6644eda99eae465904cfa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +368,7 @@
     "def plot_vol(t):\n",
     "    ipv.figure()\n",
     "    ipv.view(0, -60, distance=2.5)\n",
-    "    ipv.volshow(emission.isel(t=t), extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "    ipv.volshow(emission.sel(t=t), extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
     "    ipv.show()"
    ]
   },
@@ -335,30 +407,27 @@
     "measurements_2d = xr.DataArray(measurements_2d.data.reshape(nt, sensor.num_alpha, sensor.num_beta), dims=['t', 'alpha', 'beta'])\n",
     "anim = measurements_2d.utils_visualization.animate()\n",
     "\n",
-    "outpath = 'gifs/unknown_rotaxis.measurements.theta_{:2.0f}.phi_{:2.0f}.gif'.format(np.rad2deg(theta), np.rad2deg(phi))\n",
-    "anim.save(outpath, writer='imagemagick', fps=10)"
+    "#outpath = 'gifs/unknown_rotaxis.measurements.theta_{:2.0f}.phi_{:2.0f}.gif'.format(np.rad2deg(theta), np.rad2deg(phi))\n",
+    "#anim.save(outpath, writer='imagemagick', fps=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "26ca6275-c501-4be8-be9c-2a1963aa941f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop rays which do not cross the domain (this gives measurements that cannot be reshaped into an image)\n",
-    "sensor = xr.load_dataset('../sensors/a0.00_th1.57_ngeo100_npix4096.nc')\n",
-    "sensor = sensor.where(sensor.r < 5)\n",
-    "r_min = sensor.r.min().data   # Minimum supervision radius\n",
-    "sensor = sensor.fillna(0.0)\n",
+    "sensor = sensor.where(sensor.r < 5, drop=True).fillna(0.0)\n",
     "measurements = emission_utils.integrate_rays(emission, sensor)\n",
     "measurements_test = emission_utils.integrate_rays(emission_test, sensor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "5663b806-8ab6-4268-972d-82c177ff1892",
+   "execution_count": 24,
+   "id": "6d686451-c79e-4058-bade-9ca8f7077db2",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +443,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb83ac8e31c54081b8da526bbef2977f",
+       "model_id": "19a4f3a2f5a44652812b52dd32068194",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,11 +464,10 @@
     "    'lr_axis': 1e-1,\n",
     "    'posenc_deg': 3,\n",
     "    'batchsize': 1024,\n",
-    "    'r_min': r_min\n",
     "}\n",
     "state, emission_vis, rot_axis_est = train_network(\n",
     "    sensor, emission, emission_test, velocity_field, hparams, \n",
-    "    runname='unknown_rotation/init_axis_0.0.-1'\n",
+    "    runname='unknown_rotation/init_axis_0.0.-1', \n",
     "    log_period=100, x_res_vis=64, y_res_vis=64, z_res_vis=64\n",
     ")\n",
     "emission_estimate = emission_utils.generate_orbit_3d(\n",
