--- a/tutorials/Tutorial3 - estimate 3D emission from ngEHT observations.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from ngEHT observations.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-wswjksoy because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-yjzw_9lz because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-18 11:00:31.375405: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-02-02 14:58:20.298934: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '2,3'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0,1'"
    ]
   },
   {
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "224c0a8ff965441b92c2958b21cb816b",
+       "model_id": "785f1a7a78ca40e8ae59ce4c893304e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f0337e87820>"
+       "<matplotlib.animation.FuncAnimation at 0x7f5f50761670>"
       ]
      },
      "execution_count": 3,
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ca3de960-c15e-45f6-bc82-835019930c08",
    "metadata": {},
    "outputs": [],
@@ -208,19 +208,19 @@
     "}\n",
     "\n",
     "# Measurement model and loss/training setup\n",
-    "predictor = bhnerf.network.NeRF3D_RotationAxis()\n",
+    "predictor = bhnerf.network.NeRF_RotationAxis()\n",
     "emission_op = bhnerf.network.EmissionOperator(predictor, orbit_args)\n",
     "visibility_op = bhnerf.network.VisibilityOperator(emission_op)\n",
     "\n",
-    "def loss_fn(params, x, y, z, t, d, target, sigma, dtft_matrices):\n",
-    "    visibilities, images = visibility_op(params, x, y, z, t, d, dtft_matrices)\n",
+    "def loss_fn(params, coordinates, d, target, sigma, dtft_matrices):\n",
+    "    visibilities, images = visibility_op(params, coordinates, d, dtft_matrices)\n",
     "    loss = jnp.mean((jnp.abs(visibilities - target)/sigma)**2)\n",
     "    return loss, [visibilities, images]\n",
     "\n",
     "@functools.partial(jit, static_argnums=(0))\n",
     "def train_step(loss_fn, state, x, y, z, t, d, target, sigma, dtft_matrices):\n",
     "    (loss, [visibilities, images]), grads = jax.value_and_grad(loss_fn, argnums=(0), has_aux=True)(\n",
-    "        state.params, x, y, z, t, d,  target, sigma, dtft_matrices)\n",
+    "        state.params, [t, x, y, z], d,  target, sigma, dtft_matrices)\n",
     "    grads = jax.lax.pmean(grads, axis_name='batch')\n",
     "    state = state.apply_gradients(grads=grads)\n",
     "    return loss, state, visibilities, images\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "808d4541-e59e-4bc2-ac43-a59f256c464b",
    "metadata": {
     "tags": []
@@ -250,7 +250,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0278713d34749c49bd054f3f2b7780f",
+       "model_id": "600d76f541774f9c84b0d40e071041a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,15 +285,14 @@
     "# Define supervision coordinates\n",
     "t, x, y, z, d = bhnerf.network.get_input_coords(sensor, t_array=obs_times, batch='t').values()\n",
     "\n",
-    "# Grid for visualization (no interpolation factor is added for easy comparison) \n",
-    "x_res_vis, y_res_vis, z_res_vis = spatial_res\n",
-    "t_vis, x_vis, y_vis, z_vis  = np.meshgrid(orbit_args['tstart'], \n",
-    "                                          np.linspace(emission.x[0], emission.x[-1], x_res_vis),\n",
-    "                                          np.linspace(emission.y[0], emission.y[-1], y_res_vis),\n",
-    "                                          np.linspace(emission.z[0], emission.z[-1], z_res_vis),\n",
-    "                                          indexing='ij')\n",
+    "# Grid for visualization (no interpolation is added for easy comparison) \n",
+    "vis_coords = np.meshgrid(orbit_args['tstart'], \n",
+    "                         np.linspace(emission.x[0], emission.x[-1], spatial_res[0]),\n",
+    "                         np.linspace(emission.y[0], emission.y[-1], spatial_res[1]),\n",
+    "                         np.linspace(emission.z[0], emission.z[-1], spatial_res[2]),\n",
+    "                         indexing='ij')\n",
     "\n",
-    "params = predictor.init(jax.random.PRNGKey(1), x[:1, ...], y[:1, ...], z[:1, ...], t[:1, ...], **orbit_args)['params']\n",
+    "params = predictor.init(jax.random.PRNGKey(1), [t[:1, ...], x[:1, ...], y[:1, ...], z[:1, ...]], **orbit_args)['params']\n",
     "\n",
     "# Split learning rate for axis / network parameters\n",
     "tx = optax.chain(optax.masked(optax.adam(learning_rate=hparams['lr_axis']), mask=flattened_traversal(lambda path, _: path[-1] == 'axis')),\n",
@@ -324,9 +323,8 @@
     "        writer.add_scalar('log_loss/train', np.log10(np.mean(loss)), global_step=i)\n",
     "        if (i == 1) or (i % log_period) == 0:\n",
     "            current_state = jax.device_get(flax.jax_utils.unreplicate(state))\n",
-    "            emission_grid = emission_op(current_state.params, x_vis, y_vis, z_vis, t_vis)[0]\n",
-    "            emission_grid = bhnerf.emission.zero_unsupervised_emission(\n",
-    "                emission_grid, x_vis[0], y_vis[0], z_vis[0], sensor.r_min, sensor.r_max)\n",
+    "            emission_grid = emission_op(current_state.params, vis_coords)\n",
+    "            emission_grid = bhnerf.emission.zero_unsupervised_emission(emission_grid, vis_coords[1:], sensor.r_min, sensor.r_max)\n",
     "            rot_axis_estimate = bhnerf.utils.normalize(current_state.params['axis'])\n",
     "            writer.add_image('image_plane/true', image_plane[batch_inds[0], None, ...], global_step=i)\n",
     "            writer.add_image('image_plane/estimate', images[0, 0, None, :, :], global_step=i)\n",
@@ -343,14 +341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8686979ee6f34a73b8318f4c1dee6780",
+       "model_id": "1341466b3a9945d0a8a4757a2f0c61d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,7 +369,8 @@
     "\n",
     "# Get the convereged solution from the neural network\n",
     "current_state = jax.device_get(flax.jax_utils.unreplicate(state))\n",
-    "emission_grid = emission_op(current_state.params, x_vis, y_vis, z_vis, t_vis)[0]\n",
+    "emission_grid = emission_op(current_state.params, vis_coords)\n",
+    "emission_grid = bhnerf.emission.zero_unsupervised_emission(emission_grid, vis_coords[1:], sensor.r_min, sensor.r_max)\n",
     "        \n",
     "extent = [(float(emission[dim].min()), float(emission[dim].max())) for dim in ('x', 'y', 'z')]\n",
     "ipv.figure()\n",
